# jaundice-news-filter

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
jaundice_rate/: jaundice_analysis.py  main.py  server.py  settings.py  text_tools.py  utils.py
jaundice_rate/adapters/: __init__.py  exceptions.py  html_tools.py  inosmi_ru.py
jaundice_rate/charged_dict/: negative_words.txt
tests/: helpers.py  tests_adapters.py  tests_calc_jaundice_rate.py  tests_jaundice_analysis.py  tests_server.py  tests_text_tools.py
tests/fixtures/: article_analysis_result.txt  article_html.txt  charged_words.txt
