[tool.poetry]
name = "jaundice-rate"
version = "0.1.0"
description = ""
authors = ["alexSmkh"]
readme = "README.md"
packages = [{include = "jaundice_rate"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.0.0,<4.0.0"
cchardet = ">=2.0.0,<3.0.0"
aiodns = ">=2.0.0,<3.0.0"
beautifulsoup4 = ">=4.0.0,<5.0.0"
requests = ">=2.0.0,<3.0.0"
pymorphy2 = "0.8"
pymorphy2-dicts = ">=2.0.0,<3.0.0"
dawg-python = ">=0.7.0,<0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
